# aoc_2025

./: .clang-format  CMakeLists.txt  functions.cmake  perf.fish
src/: d01p1.cpp  d01p2.cpp  d02p1.cpp  d02p2.cpp  d03p1.cpp  d03p2.cpp  d04p1.cpp  d04p2.cpp  d05p1.cpp  d05p2.cpp  d06p1.cpp  d06p2.cpp  d07p1.cpp  d07p2.cpp  d08p1.cpp  d08p2.cpp  d09p1.cpp  matrix.hpp  template.cpp  utility.cpp  utility.hpp
